Add a CSS parser

--- a/kb.html
+++ b/kb.html
@@ -26,6 +26,7 @@ All rights reserved.
 <script type="text/javascript" src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.min.js"></script>
 <script type="text/javascript" src="bower_components/doT/doT.min.js"></script>
 <script type="text/javascript" src="bower_components/URLON/src/urlon.js"></script>
+<script type="text/javascript" src="bower_components/cssparser/lib/cssparser.js"></script>
 <script type="text/javascript" src="js/color.js"></script>
 <script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="extensions.js"></script>
