Updated makefile to copy new cssparser bower_component

--- a/kb.html
+++ b/kb.html
@@ -26,7 +26,7 @@ All rights reserved.
 <script type="text/javascript" src="js/bootstrap-colorpicker-module.min.js"></script>
 <script type="text/javascript" src="js/doT.min.js"></script>
 <script type="text/javascript" src="js/urlon.js"></script>
-<script type="text/javascript" src="bower_components/cssparser/lib/cssparser.js"></script><script type="text/javascript">$cssParser = parser;</script>
+<script type="text/javascript" src="js/cssparser.js"></script><script type="text/javascript">$cssParser = parser;</script>
 <script type="text/javascript" src="js/color.js"></script>
 <script type="text/javascript" src="js/jsonl.min.js"></script>
 <script type="text/javascript" src="extensions.js"></script>
