--- a/kb.html
+++ b/kb.html
@@ -474,15 +474,17 @@ Nav Bar / Header
           <input id="picker-filter" class="form-control input-sm" type='text' ng-model="pickerFilter" placeholder="Filter"
                  ng-change="pickerSelection = {}">
         </div>
-        <ul id="glyphs" ng-class="{disabled:selectedKeys.length<1}">
-          <li ng-repeat="glyph in picker.glyphs | filter:pickerFilter"
-             class="glyph hint--top"
-             data-hint="{{glyph.desc}}"
-             ng-click="pickerSelect(glyph)"
-             ng-bind-html="glyph.html"
-             ng-class="{selected:pickerSelection===glyph}">
-          </li>
-        </ul>
+        <div id="glyphScroller">
+          <ul id="glyphs" ng-class="{disabled:selectedKeys.length<1}">
+            <li ng-repeat="glyph in picker.glyphs | filter:pickerFilter"
+               class="glyph hint--top"
+               data-hint="{{glyph.desc}}"
+               ng-click="pickerSelect(glyph)"
+               ng-bind-html="glyph.html"
+               ng-class="{selected:pickerSelection===glyph}">
+            </li>
+          </ul>
+        </div>
         <div class="col-md-12 col-lg-12 hint--top hint--rounded" style="padding:4px 0px;">
           <input id="picker-html" class="form-control input-sm" type='text' 
                 ng-model="pickerSelection.html" placeholder="No glyph selected" 
