--- a/kb.html
+++ b/kb.html
@@ -454,9 +454,9 @@ Nav Bar / Header
           <li ng-repeat="color in palette.colors"
              ng-style="{'background-color':color.css}"
              ng-click="clickSwatch(color,$event)"
-             class="swatch hint--top"
+             class="swatch"
              ng-class="{'selected-bg': color.css === multi.color, 'selected-fg': color.css === multi.default.textColor}"
-             data-hint="{{color.name}}"
+             tooltip="{{color.name}}"
              ui-draggable="true" drag-channel="dragColor" drag="color">
                <div class='highlight fg'></div>
                <div class='highlight bg'></div>
@@ -470,22 +470,22 @@ Nav Bar / Header
       <!-- Character Picker -->
       <div class="col-md-6 col-lg-6" ng-class="{hidden:!picker.name}">
         {{picker.name}}
-        <div class="col-md-12 col-lg-12 hint--top hint--rounded" style="padding:4px 0px;">
+        <div class="col-md-12 col-lg-12" style="padding:4px 0px;">
           <input id="picker-filter" class="form-control input-sm" type='text' ng-model="pickerFilter" placeholder="Filter"
                  ng-change="pickerSelection = {}">
         </div>
         <div id="glyphScroller">
           <ul id="glyphs" ng-class="{disabled:selectedKeys.length<1}">
             <li ng-repeat="glyph in picker.glyphs | filter:pickerFilter"
-               class="glyph hint--top"
-               data-hint="{{glyph.desc}}"
+               class="glyph"
+               tooltip="{{glyph.desc}}"
                ng-click="pickerSelect(glyph)"
                ng-bind-html="glyph.html"
                ng-class="{selected:pickerSelection===glyph}">
             </li>
           </ul>
         </div>
-        <div class="col-md-12 col-lg-12 hint--top hint--rounded" style="padding:4px 0px;">
+        <div class="col-md-12 col-lg-12" style="padding:4px 0px;">
           <input id="picker-html" class="form-control input-sm" type='text' 
                 ng-model="pickerSelection.html" placeholder="No glyph selected" 
                 onClick="this.select();" readonly>
