--- a/kb.html
+++ b/kb.html
@@ -479,7 +479,7 @@ Nav Bar / Header
           <ul id="glyphs" ng-class="{disabled:selectedKeys.length<1}">
             <li ng-repeat="glyph in picker.glyphs | filter:pickerFilter"
                class="glyph"
-               tooltip="{{glyph.desc}}"
+               tooltip="{{glyph.name}}"
                ng-click="pickerSelect(glyph)"
                ng-bind-html="glyph.html"
                ng-class="{selected:pickerSelection===glyph}"
