--- a/kb.html
+++ b/kb.html
@@ -813,7 +813,7 @@ Markdown dialog for displaying README, etc.
             <a class="btn btn-primary btn-xs" ng-href="{{layout.html_url}}" target='_blank'><i class="fa fa-github"></i> View on GitHub</a>
           </td>
           <td nowrap>
-            <a class="btn btn-success btn-xs" href="#"><i class="fa fa-folder-open"></i> Load</a>
+            <a class="btn btn-success btn-xs" href="#" ng-click="load(layout.id)"><i class="fa fa-folder-open"></i> Load</a>
           </td>
         </tr>
       </tbody>
