--- a/kb.html
+++ b/kb.html
@@ -106,8 +106,8 @@ Nav Bar / Header
       <li ng-hide="!user" class="dropdown" dropdown ng-cloak>
         <a class="dropdown-toggle" dropdown-toggle><span ng-bind-html="user.avatar"></span> {{user.name}} <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a ng-click="showSavedLayouts()" href="#"><i class="fa fa-folder-open-o"></i> My Layouts</a></li>
-          <li><a ng-click="showStarredLayouts()" href="#"><i class="fa fa-star-o"></i> Starred Layouts</a></li>
+          <li><a ng-click="showSavedLayouts(false)" href="#"><i class="fa fa-folder-open-o"></i> My Layouts</a></li>
+          <li><a ng-click="showSavedLayouts(true)" href="#"><i class="fa fa-star-o"></i> Starred Layouts</a></li>
           <li class="divider"></li>
           <li><a href="https://github.com/settings/connections/applications/{{githubClientId}}" target="_blank"><i class="fa fa-key"></i> Manage GitHub Permissions</a></li>
           <li><a ng-click="userLogout()" href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
@@ -787,7 +787,7 @@ Markdown dialog for displaying README, etc.
 <script type="text/ng-template" id="savedLayouts.html">
   <div class="modal-header">
     <button type="button" class="close" ng-click="cancel()">&times;</button>
-    <h4 class="modal-title">Saved Layouts</h4>
+    <h4 class="modal-title">{{params.starred ? 'Starred Layouts' : 'Saved Layouts'}}</h4>
   </div>
   <div class="modal-body">
     <table class="table table-hover">
@@ -802,14 +802,14 @@ Markdown dialog for displaying README, etc.
       </thead>
       <tbody>
         <tr ng-if="layouts.length === 0">
-          <td colspan='5'>No saved layouts</td>
+          <td colspan='5'>{{params.starred ? 'No starred layouts.' : 'No saved layouts.'}}</td>
         </tr>
         <tr ng-repeat="layout in layouts">
           <td>{{layout.index}}</td>
           <td>{{layout.description}}</td>
           <td>{{layout.updated_at}}</td>
           <td nowrap>
-            <a class="btn btn-danger btn-xs" href="#"><i class="fa fa-trash"></i> Delete</a>
+            <a class="btn btn-danger btn-xs" href="#" ng-hide="params.starred"><i class="fa fa-trash"></i> Delete</a>
             <a class="btn btn-primary btn-xs" ng-href="{{layout.html_url}}" target='_blank'><i class="fa fa-github"></i> View on GitHub</a>
           </td>
           <td nowrap>
