Added a message to the OAuth redirect page.

--- a/oauth.html
+++ b/oauth.html
@@ -11,6 +11,7 @@ All rights reserved.
 <script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
+<h3>Signing in...</h3>
 <script type="text/javascript">
 if(!window.opener) {
   window.close();
@@ -37,6 +38,5 @@ if(code && state) {
   window.close();
 }
 </script>
-
 </body>
 </html>
