Implement basic file saving -> Gist

--- a/kb.html
+++ b/kb.html
@@ -613,7 +613,7 @@ Nav Bar / Header
 
   <div class="col-md-12 col-lg-12 row" style="margin-top:1em;margin-left:0px;">
     <alert type="success" ng-hide="!saved" close="saved=false" ng-cloak>
-      Saved!  Your saved layout can be accessed via <a class="alert-link" ng-href="#/layouts/{{saved}}">this link</a>.
+      Saved!  Your saved layout can be accessed via <a class="alert-link" ng-href="#/gists/{{saved}}">this link</a>.
     </alert>
     <alert type="danger" ng-hide="!saveError" close="saveError=''" ng-cloak>
       <P>There was an error saving your layout on the server: {{saveError}}</P>
