Disable save button if user not signed in

--- a/kb.html
+++ b/kb.html
@@ -159,7 +159,10 @@ Nav Bar / Header
   </div>
   <!-- Save button (right aligned) -->
   <div class="btn-group pull-right">
-    <button type="button" class="btn btn-success" ng-class="{disabled:!canSave()}" ng-click="save()"><i class="fa fa-save"></i> Save</button>
+    <button type="button" class="btn btn-success hint--bottom hint--no-animate" ng-class="{disabled:!canSave()}" ng-click="save()"
+            ng-attr-data-hint="{{!user || !user.id ? 'Sign in to save your layouts.' : ''}}">
+      <i class="fa fa-save"></i> Save
+    </button>
   </div>
   <div class="btn-group pull-right" style="margin-right: 4px;">
     <button type="button" class="btn btn-success" ng-click="downloadSvg()"><i class="fa fa-download"></i> Download SVG (experimental)</button>
