--- a/oauth.html
+++ b/oauth.html
@@ -20,7 +20,11 @@ if(!window.opener) {
 var code = (window.location.href.match(/[\?\&]code=([^\&]*)/) || [null])[1];
 var state = (window.location.href.match(/[\?\&]state=([^\&]*)/) || [null])[1];
 if(code && state) {
-  $.getJSON('http://kle-gatekeeper.azurewebsites.net/authenticate/'+code, function(data) {
+  var gatekeeper = 'kle-gatekeeper';
+  if(window.location.href.match(/^http:\/\/localhost\:/)) {
+    gatekeeper += "-local";
+  }
+  $.getJSON('http://'+gatekeeper+'.azurewebsites.net/authenticate/'+code, function(data) {
     if(data.error) {
       window.opener.__oauthError('Gatekeeper returned an error code: ' + data.error);
     } else if(!data.token) {
